--- a/style/style.css
+++ b/style/style.css
@@ -37,193 +37,181 @@ h1,h2,h3,p{
     flex-direction: column;
     background: #000000;
 }
-.header-top{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.background{
+    background: url(../img/Rectangle\ 3.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-.menu{
-    margin-top: 32px;
-    margin-right: 115px;
-    display: flex;
-    margin-bottom: 32px;
+.menu-link{
+    font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 16px;
+text-transform: uppercase;
+color: #969696;
 }
 .menu-item{
     padding: 0 16px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    text-transform: uppercase;
 }
-.menu-link{
-    color: #969696;
+.header-top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-.header-bottom__logo{
-    margin-top: 160px;
-    margin-bottom: 80px;
-    width: 320px;
-    height: 320px;
-}
-.header-bottom__text{
-    width: 730px;
-    color: white;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 154px;
+.menu{
+    display: flex;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    margin-right: 115px;
 }
 .header-bottom{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.background{
-    background: url('../img/Rectangle\ 3.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
+.header-bottom__logo{
+    margin-top: 160px;
+    margin-bottom: 80px;
 }
-.line{
-    width: 120px;
-    height: 1px;
-    background-color: white;
+.header-bottom__text{
+    text-align: center;
+text-transform: uppercase;
+color: #FFFFFF;
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 150%;
+width: 730px;
+margin-bottom: 154px;
 }
 .half{
     display: flex;
 }
-.section-right{
-    flex-basis: 50%;
-    background: url('../img/Rectangle\ 8.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-}
 .section-left{
     flex-basis: 50%;
 }
-.section-upper{
-    align-items: center;
+.section-right{
+    flex-basis: 50%;
+    background: url(../img/Rectangle\ 8.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .section-upper__h2{
-    margin-top: 93px;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-    text-transform: uppercase;
-    color: white;
-    margin-bottom: 50px;
-}
-.section-lower{
-    margin: 0 80px;
-}
-.col1-uptext{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 21px;
-    color: white;
-    margin-top: 25px;
-}
-.col1-lowtext{
-    margin-top: 13px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color:#D0D0D0;
-    margin-bottom: 95px;
-}
-.watch{
-    background-color: #191B1C;
-    width: 260px;
-    height: 325px;
-    padding: 55px 22px;
-    
-}
-.col1{
-    display: flex;
-    flex-direction: column;
-    margin-right: 50px;
-}
-.col2{
-    display: flex;
-    flex-direction: column;
-}
-.col3{
-    display: flex;
-    flex-direction: column;
-    margin-left: 50px;
-}
-.columns{
-    margin-top: 50px;
-    display: flex;
-    justify-content: space-between;
-}
-.textbutt__h2{
     font-style: normal;
 font-weight: 700;
 font-size: 36px;
 line-height: 42px;
 text-align: center;
 text-transform: uppercase;
-color: white;
-margin-bottom: 30px;
+color: #FFFFFF;
+margin-bottom: 50px;
+margin-top: 93px;
 }
-.textbutt{
-    margin-top: 484px;
+.section-upper{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 30px;
 }
-.button{
-    border: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    padding: 12px 28px;
-    margin-top: 30px;
-    text-align: center;
-letter-spacing: 0.1em;
-text-transform: uppercase;
-font-style: normal;
+.line{
+    width: 120px;
+    height: 1px;
+    background-color: white;
+}
+.columns{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.section-lower{
+    margin: 0 80px;
+}
+.col1-uptext{
+    font-style: normal;
 font-weight: 400;
 font-size: 18px;
 line-height: 21px;
 color: #FFFFFF;
-margin-bottom: 102px;
+margin-top: 25px;
 }
-.section-left-scnd{
-    background: url('../img/Rectangle\ 9.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    flex-basis: 45%;
+.col1-lowtext{
+    font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+color:#D0D0D0;
+margin-top: 13px;
+margin-bottom: 95px;
 }
-.section-right-scnd{
-    flex-basis: 55%;
+.watch{
     display: flex;
     align-items: center;
-    flex-direction: column;
+    justify-content: center;
+    background: #191B1C;
+    width: 260px;
+    height: 325px;
+}
+.col1{
+    margin-right: 50px;
+}
+.col3{
+    margin-left: 50px;
+}
+.section-right__h2{
+    margin-top: 484px;
+    font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 42px;
+text-align: center;
+text-transform: uppercase;
+color: #FFFFFF;
+margin-bottom: 30px;
+}
+.button1{
+    border: 1px solid #FFFFFF;
+box-sizing: border-box;
+    padding: 12px 28px;
+    text-align: center;
+letter-spacing: 0.1em;
+text-transform: uppercase;
+color: #FFFFFF;
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 21px;
+margin-top: 30px;
 }
 .half-scnd{
     display: flex;
 }
-.section-right-scnd-uptext{
-    margin-top: 100px;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-    text-transform: uppercase;
-    color: white;
-    margin-bottom: 40px;
+.section-left-scnd{
+    flex-basis: 45%;
+    background: url(../img/Rectangle\ 9.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-.section-right-scnd-lowtext{
+.section-right-scnd{
+    flex-basis: 55%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.section-right-scnd__h2{
+    margin-top: 100px;
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 42px;
+text-align: center;
+text-transform: uppercase;
+color: #FFFFFF;
+margin-bottom: 40px;
+}
+.section-right-scnd__lowtext{
+    margin-top: 40px;
     font-style: normal;
 font-weight: 400;
 font-size: 14px;
@@ -231,61 +219,328 @@ line-height: 150%;
 text-align: center;
 color: #FFFFFF;
 width: 471px;
-margin-top: 40px;
 margin-bottom: 61px;
 }
 .button2{
-    text-align: center;
-letter-spacing: 0.1em;
-text-transform: uppercase;
-color: #FFFFFF;
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 21px;
-border: 1px solid #FFFFFF;
+    border: 1px solid #FFFFFF;
     box-sizing: border-box;
-    padding: 12px 28px;
-    margin-bottom: 102px;
-}
-.grid{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.grid-uptext{
-    font-style: normal;
-font-weight: 700;
-font-size: 36px;
-line-height: 42px;
-text-align: center;
-text-transform: uppercase;
-color: white;
-margin-bottom: 46px;
-margin-top: 120px;
-}
-.grid-bottom{
-    margin-top: 81px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 110px;
-}
-.wt-lowtext{
-    margin-top: 13px;
+        padding: 12px 28px;
+        text-align: center;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #FFFFFF;
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color:#D0D0D0;
-    margin-bottom: 42px;
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 102px;
 }
 .wt-uptext{
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 21px;
-    color: white;
+    color: #FFFFFF;
     margin-top: 25px;
+}
+.wt-lowtext{
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+color:#D0D0D0;
+margin-top: 13px;
+}
+.grid-top{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.grid-top__h2{
+    font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 42px;
+text-align: center;
+text-transform: uppercase;
+color: #FFFFFF;
+margin-bottom: 46px;
+margin-top: 120px;
+}
+.grid-bottom{
+    margin-top: 81px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.wt1{
+    margin-bottom: 42px;
+}
+.wt5{
+    margin-bottom: 152px;
+}
+.footer__h2{
+    font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 42px;
+text-align: center;
+text-transform: uppercase;
+color: #FFFFFF;
+margin-top: 60px;
+margin-bottom: 46px;
+}
+.background2{
+    background-color: #0F0F0F;
+}
+.footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.brands{
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 98px;
+    width: 1110px;
+}
+.rights{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 18px;
+    width: 1110px;
+}
+.r2{
+    font-style: normal;
+font-weight: 700;
+font-size: 12px;
+line-height: 14px;
+text-align: right;
+border-bottom: 1px solid #D0D0D0;
+color: #D0D0D0;
+padding-bottom: -5px;
+}
+.r1{
+    font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 14px;
+color: #D0D0D0;
+}
+@media(max-width:1024px){
+    .header-top>a{
+        padding-left: 50px;
+    }
+    .header-bottom__text{
+        width: 500px;
+        font-size: 20px;
+    }
+    .col1-uptext{
+        font-size: 20px;
+    }
+    .col1-lowtext{
+        font-size: 18px;
+    }
+    .section-left-scnd{
+        background-position: center;
+        background-size: 190%;
+    }
+    .section-right-scnd__lowtext{
+        font-size: 16px;
+    }
+    .col1-lowtext{
+        margin-bottom: 50px;
+    }
+    .half{
+        flex-wrap: wrap;
+    }
+    .section-right{
+        flex-basis: 100%;
+    }
+    .section-upper__h2{
+        margin-top: 50px;
+    }
+    .button1{
+        margin-bottom: 100px;
+    }
+    .grid-top__h2{
+        margin-top: 50px;
+    }
+    .section-right-scnd__h2{
+        margin-top: 20px;
+    }
+    .grid-bottom{
+        width: 600px;
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+    .wt3{
+        margin-bottom: 42px;
+    }
+    .wt5{
+        margin-bottom: 42px;
+    }
+    .wt7{
+        margin-bottom: 42px;
+    }
+    .brands{
+        width: 600px;
+        flex-wrap: wrap;
+    }
+    .rights{
+        width: 950px;
+    }
+}
+@media(max-width:768px){
+    .menu{
+        margin-right: 50px;
+    }
+    .background{
+        background-position-x: -250px;
+    }
+    .h2{
+        font-size: 40px;
+    }
+    .columns{
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .col1-lowtext{
+        font-size: 22px;
+    }
+    .col1-uptext{
+        font-size: 24px;
+    }
+    .col1{
+        margin-right: 0;
+    }
+    .col3{
+        margin-left: 0;
+    }
+    .section-left{
+        flex-basis: 100%;
+    }
+    .watch{
+    width: 300px;
+    height: 365px;
+    }
+    .wtc{
+        width: 260px;
+    }
+    .button1{
+        font-size: 22px;
+    }
+    .button2{
+        font-size: 22px;
+    }
+    .section-right-scnd{
+        flex-basis: 100%;
+        background: url(../img/Rectangle\ 91.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .section-left-scnd{
+        display: none;
+    }
+    .section-right-scnd__h2{
+        margin-top: 25px;
+    }
+    .grid-bottom{
+        width: 650px;
+    }
+    .rights{
+        width: 650px;
+    }
+    .menu-item{
+        font-size: 22px;
+    }
+}
+@media(max-width:480px){
+    .wt2{
+        margin-bottom: 42px;
+    }
+    .wt4{
+        margin-bottom: 42px;
+    }
+    .wt6{
+        margin-bottom: 42px;
+    }
+    .wt8{
+        margin-bottom: 42px;
+    }
+    .menu{
+        flex-direction: column;
+        font-size: 30px;
+        margin-top: 24px;
+        margin-bottom: 24px;
+    }
+    .header-bottom__text{
+        width: 350px;
+        margin-bottom: 80px;
+    }
+    .header-bottom__logo{
+        margin-top: 80px;
+        margin-bottom: 40px;
+    }
+    .background{
+        background-position-x: -800px;
+    }
+    .section-right-scnd{
+        background-position: center;
+    }
+    .section-right-scnd__lowtext{
+        width: 350px;
+        font-size: 20px;
+    }
+    .grid-bottom{
+        width: 300px;
+        margin: 0 auto;
+    }
+    .wtc1{
+        width: 260px;
+    }
+    .col1-uptext{
+        font-size: 26px;
+    }
+    .col1-lowtext{
+        font-size: 24px;
+    }
+    .wt-uptext{
+        font-size: 26px;
+    }
+    .wt-lowtext{
+        font-size: 24px;
+    }
+    .brands{
+        width: 350px;
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+    .rights{
+        width: 350px;
+    }
+    .r1{
+        font-size: 14px;
+    }
+    .r2{
+        font-size: 14px;
+    }
+}
+@media(max-width:360px){
+    .menu-item{
+        font-size: 20px;
+    }
+    .header-top>a{
+        padding-left: 20px;
+        margin-right: 20px;
+    }
+    .menu{
+        margin-right: 10px;
+    }
+    .header-bottom__text{
+        font-size: 16px;
+    }
 }
